--- a/dataland-frontend/src/assets/scss/components/buttons.scss
+++ b/dataland-frontend/src/assets/scss/components/buttons.scss
@@ -1,14 +1,9 @@
-@use 'sass:color';
-@use '../colors';
-@use '../units';
-@use '../variables';
-
 .p-button,
 .primary-button,
 .tertiary-button {
   white-space: nowrap;
   cursor: pointer;
-  font-weight: units.$button-fw;
+  font-weight: var(--button-fw);
   text-decoration: none;
   min-width: 10em;
   width: fit-content;
@@ -26,150 +21,146 @@
 
   &:enabled:hover {
     color: white;
-    background: color.adjust(colors.$btn-primary-bg, $lightness: -20%);
-    border-color: color.adjust(colors.$btn-primary-bg, $lightness: -20%);
+    background: hsl(from var(--btn-primary-bg) h s calc(l - 20));
+    border-color: hsl(from var(--btn-primary-bg) h s calc(l - 20));
   }
 
   &:enabled:active {
-    background: color.adjust(colors.$btn-primary-bg, $lightness: -10%);
-    border-color: color.adjust(colors.$btn-primary-bg, $lightness: -10%);
+    background: hsl(from var(--btn-primary-bg) h s calc(l - 10));
+    border-color: hsl(from var(--btn-primary-bg) h s calc(l - 10));
   }
 
   &:disabled {
     background-color: transparent;
     border: 0;
-    color: colors.$btn-disabled-color;
+    color: var(--btn-disabled-color);
     cursor: not-allowed;
   }
 
   &:focus {
     outline: 0 none;
     outline-offset: 0;
-    box-shadow: 0 0 0 0.2rem colors.$btn-focus-border-color;
+    box-shadow: 0 0 0 0.2rem var(--btn-focus-border-color);
   }
 }
 
 .p-button {
-  color: colors.$btn-primary-color;
-  background: colors.$btn-primary-bg;
-  border: 1px solid colors.$btn-primary-bg;
-  padding: variables.$spacing-xxs variables.$spacing-sm;
-  line-height: variables.$line-height-1;
-  margin: variables.$spacing-xxxs;
+  color: var(--btn-primary-color);
+  background: var(--btn-primary-bg);
+  border: 1px solid var(--btn-primary-bg);
+  padding: var(--spacing-xs) var(--spacing-md);
+  line-height: 1rem;
+  margin: var(--spacing-xxs);
 
   &.p-button-danger {
-    background: colors.$btn-danger-bg;
-    border: 1px solid colors.$btn-danger-bg;
+    background: var(--btn-danger-bg);
+    border: 1px solid var(--btn-danger-bg);
 
     &:enabled:hover {
-      background: color.adjust(colors.$btn-danger-bg, $lightness: -20%);
-      border-color: color.adjust(colors.$btn-danger-bg, $lightness: -20%);
+      background: hsl(from var(--btn-danger-bg) h s calc(l - 20));
+      border-color: hsl(from var(--btn-danger-bg) h s calc(l - 20));
     }
 
     &:enabled:active {
-      background: color.adjust(colors.$btn-danger-bg, $lightness: -10%);
-      border-color: color.adjust(colors.$btn-danger-bg, $lightness: -10%);
+      background: hsl(from var(--btn-danger-bg) h s calc(l - 10));
+      border-color: hsl(from var(--btn-danger-bg) h s calc(l - 10));
     }
   }
 
   &.p-button-success {
-    background: colors.$btn-success-bg;
-    border: 1px solid colors.$btn-success-bg;
+    background: var(--btn-success-bg);
+    border: 1px solid var(--btn-success-bg);
 
     &:enabled:hover {
-      background: color.adjust(colors.$btn-success-bg, $lightness: -20%);
-      border-color: color.adjust(colors.$btn-success-bg, $lightness: -20%);
+      background: hsl(from var(--btn-success-bg) h s calc(l - 20));
+      border-color: hsl(from var(--btn-success-bg) h s calc(l - 20));
     }
 
     &:enabled:active {
-      background: color.adjust(colors.$btn-success-bg, $lightness: -10%);
-      border-color: color.adjust(colors.$btn-success-bg, $lightness: -10%);
+      background: hsl(from var(--btn-success-bg) h s calc(l - 10));
+      border-color: hsl(from var(--btn-success-bg) h s calc(l - 10));
     }
   }
 
-  &.p-button-rounded {
-    border-radius: variables.$radius-lg;
-  }
-
   &.p-button-sm {
-    font-size: variables.$fs-sm;
-    padding: variables.$spacing-xxs variables.$spacing-xs;
+    font-size: var(--font-size-sm);
+    padding: var(--spacing-xs) var(--spacing-sm);
   }
 
   &.p-button-icon {
-    padding: variables.$spacing-xxxs;
+    padding: var(--spacing-xxs);
     line-height: 0.75rem;
 
     .pi {
-      font-size: variables.$fs-xs;
+      font-size: var(--font-size-xs);
     }
   }
 
   &.p-button-textcolor {
     background-color: transparent;
-    color: colors.$main-text-color;
+    color: var(--main-text-color);
     border-color: transparent;
 
     &:enabled:hover {
-      color: colors.$btn-primary-bg;
+      color: var(--btn-primary-bg);
       background-color: transparent;
     }
 
     &:enabled:active {
-      color: colors.$btn-primary-bg;
-      border-color: colors.$btn-primary-color;
+      color: var(--btn-primary-bg);
+      border-color: var(--btn-primary-color);
     }
   }
 
   &.p-button-outlined {
     background-color: transparent;
-    color: colors.$btn-primary-bg;
+    color: var(--btn-primary-bg);
     border-style: solid;
-    border-color: colors.$btn-primary-bg;
+    border-color: var(--btn-primary-bg);
     border-width: 1px;
 
     &:enabled:hover {
-      background: color.adjust(colors.$btn-primary-bg, $lightness: 45%);
+      background: hsl(from var(--btn-primary-bg) h s 45);
     }
 
     &:enabled:active {
-      background: color.adjust(colors.$btn-primary-bg, $lightness: 40%);
+      background: hsl(from var(--btn-primary-bg) h s 40);
     }
 
     &.p-button-danger {
-      color: colors.$btn-danger-bg;
-      border-color: colors.$btn-danger-bg;
+      color: var(--btn-danger-bg);
+      border-color: var(--btn-danger-bg);
 
       &:enabled:hover {
-        background: color.adjust(colors.$btn-danger-bg, $lightness: 45%);
+        background: hsl(from var(--btn-danger-bg) h s 45);
       }
 
       &:enabled:active {
-        background: color.adjust(colors.$btn-danger-bg, $lightness: 40%);
+        background: hsl(from var(--btn-danger-bg) h s 40);
       }
     }
 
     &.p-button-success {
-      color: colors.$btn-success-bg;
-      border-color: colors.$btn-success-bg;
+      color: var(--btn-success-bg);
+      border-color: var(--btn-success-bg);
 
       &:enabled:hover {
-        background: color.adjust(colors.$btn-success-bg, $lightness: 45%);
+        background: hsl(from var(--btn-success-bg) h s 45);
       }
 
       &:enabled:active {
-        background: color.adjust(colors.$btn-success-bg, $lightness: 40%);
+        background: hsl(from var(--btn-success-bg) h s 40);
       }
     }
   }
 
   &.p-button-text {
     background-color: transparent;
-    color: colors.$btn-primary-bg;
+    color: var(--btn-primary-bg);
     border: 0;
 
     &:enabled:hover {
-      color: color.adjust(colors.$btn-primary-bg, $lightness: -30%);
+      color: hsl(from var(--btn-primary-bg) h s calc(l - 30));
       background: transparent;
       border: 0;
     }
@@ -180,7 +171,7 @@
     }
 
     &.p-button-danger {
-      color: colors.$btn-danger-bg;
+      color: var(--btn-danger-bg);
 
       &:enabled:hover {
         background: transparent;
@@ -194,7 +185,7 @@
     }
 
     &.p-button-success {
-      color: colors.$btn-success-bg;
+      color: var(--btn-success-bg);
 
       &:enabled:hover {
         background: transparent;
@@ -214,40 +205,40 @@
 }
 
 .primary-button {
-  padding: 0 variables.$spacing-sm;
+  padding: 0 var(--spacing-md);
   height: 2.25rem;
-  color: colors.$btn-primary-color;
-  background: colors.$btn-primary-bg;
-  border: 1px solid colors.$btn-primary-bg;
+  color: var(--btn-primary-color);
+  background: var(--btn-primary-bg);
+  border: 1px solid var(--btn-primary-bg);
   margin: 0;
 }
 
 .tertiary-button {
-  padding: 0 variables.$spacing-sm;
+  padding: 0 var(--spacing-md);
   height: 2.25rem;
-  color: colors.$main-color;
+  color: var(--main-color);
   background: none;
   border: none;
 }
 
 .link {
-  color: colors.$main-color;
+  color: var(--main-color);
   background: transparent;
   border: transparent;
   cursor: pointer;
   display: flex;
 
   &:hover {
-    color: color.adjust(colors.$main-color, $lightness: -20%);
+    color: hsl(from var(--main-color) h s calc(l - 20));
     text-decoration: underline;
   }
 
   &:active {
-    color: color.adjust(colors.$main-color, $lightness: 10%);
+    color: hsl(from var(--main-color) h s calc(l + 10));
   }
 
   &:focus {
-    box-shadow: 0 0 0 0.2rem colors.$btn-focus-border-color;
+    box-shadow: 0 0 0 0.2rem var(--btn-focus-border-color);
   }
 
   &.--underlined {
