--- a/dataland-frontend/src/assets/scss/components/toolbar.scss
+++ b/dataland-frontend/src/assets/scss/components/toolbar.scss
@@ -1,12 +1,10 @@
-@use '../variables';
-
 .dataland-toolbar {
   z-index: 1000;
   background-color: var(--default-neutral-white);
 
   &.sticky {
     top: 4rem;
-    border-bottom: 1px solid variables.$gray-light;
+    border-bottom: 1px solid var(--gray-light);
 
     .d-search-filters-panel {
       padding: 0 9px 0 0;
